# Academy_Backend

./: Makefile  README.md  pyproject.toml
app/: main.py  words.txt
tests/: test_something.py
